--- a/plugins/Visar/VisarSettings.ui
+++ b/plugins/Visar/VisarSettings.ui
@@ -229,6 +229,12 @@
                </item>
                <item row="0" column="1">
                 <widget class="QComboBox" name="shotImage">
+                 <property name="font">
+                  <font>
+                   <family>.AppleSystemUIFont</family>
+                   <pointsize>10</pointsize>
+                  </font>
+                 </property>
                  <property name="toolTip">
                   <string>Shot image</string>
                  </property>
@@ -506,7 +512,7 @@
          </font>
         </property>
         <property name="title">
-         <string>Intensity parameters (offset, shift, ref*): </string>
+         <string>Intensity parameters (offset, shift, ref*,border): </string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <property name="leftMargin">
@@ -578,6 +584,13 @@
            </property>
            <property name="neutrinoSave" stdset="0">
             <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="border">
+           <property name="maximum">
+            <number>999</number>
            </property>
           </widget>
          </item>
